--- a/apps/email-worker/wrangler.toml
+++ b/apps/email-worker/wrangler.toml
@@ -1,11 +1,11 @@
 name = "email-worker"
 main = "src/index.ts"
-compatibility_date = "2023-12-18"
+compatibility_date = "2024-02-24"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "smail"
-database_id = "0c36924f-d130-4870-9113-aaee832d01dd"
+database_name = "v2mail"
+database_id = "217b1520-4b3e-4169-aa84-807a0c08c95d"
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
