--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,13 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@libsql/client": "0.4.0-pre.7",
-    "drizzle-orm": "^0.29.3",
+    "@libsql/client": "0.5.1",
+    "drizzle-orm": "^0.29.4",
     "drizzle-zod": "^0.5.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.20.12",
+    "drizzle-kit": "^0.20.14",
     "typescript": "^5.3.3"
   }
 }
